@@ -1,12 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.431 2005/10/22 20:06:53 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.432 2005/10/23 02:49:54 codeman Exp $
 
 *GLI-0.3 (17 Oct 2005)
 
   22 Oct 2005; Preston Cody <codeman@gentoo.org>
   webgli initial bootloader support + changed make.conf.
+  IP: changed defaults for stage, kernel_build_method, kernel_source_pkg.
   
   20 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIUtility.py:
